# LofiSymphony

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  Start Lofi Symphony.bat  Start Lofi Symphony.command  app.py  generator.py  launcher.py  lofi_generator.py  pyproject.toml  requirements.txt  setup.py
.streamlit/: config.toml
lofi_symphony/: app.py
scripts/: fetch_fluidsynth.py  run_local.ps1  run_local.sh
src/lofi_symphony/: __init__.py  __main__.py  app.py  audiocraft_integration.py  cli.py  fluidsynth_assets.py  generator.py  midi_input.py  timeline.py
src/lofi_symphony/_vendor/: __init__.py
tests/: test_app_entrypoint.py  test_audiocraft_integration.py  test_cli_smoke.py  test_fetch_fluidsynth.py  test_fluidsynth_assets.py  test_launch_helper_scripts.py  test_launcher_optional.py
